Fix nav on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1055,7 +1055,7 @@ a.entypo-google {
 		.menu {
 			padding: 1em 0 3em 0;
 			font-size: 1.5em;
-			margin-top: -220px;
+			margin-top: -190px;
 			&[data-state=open] {
 				margin-top: 0;
 			}
